--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello World
+<html>
+    <head>
+        <title>Hello world</title>
+    </head>
+    <body>
+        <p>Hello World!</p>
+    </body>
+</html>
